; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/audit/extr_utils.c_check_audit.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/audit/extr_utils.c_check_audit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pollfd = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_audit(%struct.pollfd* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.pollfd*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store %struct.pollfd* %0, %struct.pollfd** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.pollfd*, %struct.pollfd** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @check_auditpipe(%struct.pollfd* %7, i8* %8, i32* %9)
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @fclose(i32* %11)
  %13 = call i32 @ATF_REQUIRE_EQ(i32 0, i32 %12)
  ret void
}

declare dso_local i32 @check_auditpipe(%struct.pollfd*, i8*, i32*) #1

declare dso_local i32 @ATF_REQUIRE_EQ(i32, i32) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
